--- a/src/app/calender/calender.component.html
+++ b/src/app/calender/calender.component.html
@@ -5,7 +5,7 @@
      Calender
     </div>
     <div class="card-body">
-            <ejs-schedule width="1050" [eventSettings]="eventObject" [currentView]="setView"></ejs-schedule>
+            <ejs-schedule width="1050" [eventSettings]="eventObject" [currentView]="setView"> {{subject}}{{startTime}}{{endTime}}</ejs-schedule>
             <br>
             <div class='inline box red ' > Medications </div>
             <div class='inline box blue' > Dr Appointments</div>
